# app-modules

./: .gitignore  CHANGELOG.md  README.md  package.json  setup-nitro-module.sh
.claude/commands/: commit.md
.github/workflows/: package-publish.yml
.yarn/patches/: react-native-npm-0.83.0-577d0f2d83.patch
.yarn/versions/: f13d26c4.yml
example/react-native/: App.tsx  Gemfile  background.js  metro.config.js  package.json  react-native.config.js  route.tsx
legacy-modules/appkit-ethers5-react-native/: package.json
lib/commonjs/: client.js  client.js.map  index.js  index.js.map
lib/module/: client.js  client.js.map  index.js  index.js.map
lib/typescript/: client.d.ts  client.d.ts.map  index.d.ts  index.d.ts.map
native-modules/native-logger/: README.md  ReactNativeNativeLogger.podspec  babel.config.js  nitro.json  package.json  tsconfig.json
native-modules/react-native-aes-crypto/: AesCrypto.podspec  README.md  package.json  tsconfig.json
native-modules/react-native-app-update/: README.md  ReactNativeAppUpdate.podspec  babel.config.js  nitro.json  package.json
native-modules/react-native-async-storage/: AsyncStorage.podspec  README.md  package.json  tsconfig.json  turbo.json
native-modules/react-native-background-thread/: BackgroundThread.podspec  package.json
native-modules/react-native-background-thread/android/: CMakeLists.txt  build.gradle
native-modules/react-native-background-thread/android/src/main/cpp/: cpp-adapter.cpp
native-modules/react-native-background-thread/android/src/main/java/com/backgroundthread/: BTLogger.kt  BackgroundThreadManager.kt  BackgroundThreadModule.kt
native-modules/react-native-bundle-update/: README.md  ReactNativeBundleUpdate.podspec  babel.config.js  nitro.json  package.json  tsconfig.json
native-modules/react-native-check-biometric-auth-changed/: CONTRIBUTING.md  README.md  ReactNativeCheckBiometricAuthChanged.podspec  package.json
native-modules/react-native-check-biometric-auth-changed-auth-changed/: package.json
scripts/: create-nitro-module.js  create-nitro-view.js  setup-nitro-module.js
scripts/nitro-view/: README.md
scripts/nitro-view/template/android/: CMakeLists.txt  build.gradle
scripts/nitro-view/template/android/src/main/cpp/: cpp-adapter.cpp
scripts/nitro-view/template/android/src/main/java/com/margelo/nitro/viewname/: ViewName.kt  ViewNamePackage.kt
scripts/nitro/template/android/: CMakeLists.txt  build.gradle
scripts/nitro/template/android/src/main/cpp/: cpp-adapter.cpp
scripts/nitro/template/android/src/main/java/com/margelo/nitro/modulename/: ModuleName.kt  ModuleNamePackage.kt
(+1432 files in other folders)
